--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -1,4 +1,42 @@
-nav{
-    width: 100%;
-  
+nav {
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+
+  padding-inline: 0.75rem;
+  padding-block: 0.5rem;
+  background-color: #9e9c9c6f;
+  backdrop-filter: 10px;
+  font-family: system-ui;
+  font-weight: 600;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  p {
+  }
+
+  .left {
+    display: flex;
+    gap: 1rem;
+  }
+
+  .right {
+    display: flex;
+    gap: 1rem;
+  }
+  .nav-item {
+    font-size: 0.875rem;
+    text-transform: capitalize;
+    transition: opacity 0.2s ease;
+    cursor: default;
+
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+  .nav-item p {
+    font-size: 0.875rem;
+    text-transform: capitalize;
+  }
 }
