--- a/src/components/windows/window.scss
+++ b/src/components/windows/window.scss
@@ -1,6 +1,6 @@
 .window {
-  height: 400px;
-  width: 500px;
+  height: 500px;
+  width: 600px;
   background-color: black;
   border-radius: 0.75rem;
   overflow: hidden;
@@ -40,5 +40,9 @@
     }
 
 
+  }
+
+  .main-content{
+    height: 100%;
   }
 }
