feat: add Spotify ,Cli component with embedded playlist ,terminal commands integrate into App

--- a/src/components/windows/window.scss
+++ b/src/components/windows/window.scss
@@ -29,6 +29,7 @@
       }
       .red {
         background-color: #ff5c5f;
+        cursor:default;
       }
       .yellow {
         background-color: #fac800;
@@ -46,6 +47,13 @@
   }
   ::-webkit-scrollbar{
     width: 8px;
-    background-color: #fff;
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-thumb{
+    background-color: rgba(247, 247, 247, 0.478);
+    border-radius: 4px;
+  }
+  ::-webkit-scrollbar-thumb:hover{
+    background-color: rgba(201, 201, 201, 0.607);
   }
 }
