--- a/src/app.scss
+++ b/src/app.scss
@@ -14,13 +14,15 @@ body,
 main{
   width: 100%;
   height: 100%;
-  background-image: url("https://images.unsplash.com/photo-1757681688746-9e4716226481?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  // background-color: #000;
 
   position: relative;
   overflow: hidden;
+  transition: background-image 0.8s ease-in-out;
 }
 
 body {
