--- a/src/components/windows/window.scss
+++ b/src/components/windows/window.scss
@@ -26,10 +26,26 @@
         width: 14px;
         border-radius: 50%;
         background-color: #fff;
+        transition: all 0.2s ease;
       }
       .red {
         background-color: #ff5c5f;
         cursor:default;
+        position: relative;
+      }
+
+      .red:hover::after{
+        content: "✕";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: rgb(21, 21, 21);
+        font-size: 10px;
+        font-weight:bolder;
+      }
+       .red:hover {
+        background-color:#f27173;
       }
       .yellow {
         background-color: #fac800;
